[gd_scene load_steps=3 format=3 uid="uid://ccvdjvrogxhvx"]

[ext_resource type="Script" uid="uid://cp81u1tm7kp5y" path="res://example/views/mob/two.gd" id="1_fikf5"]
[ext_resource type="PackedScene" uid="uid://dlkcut5teoelt" path="res://example/views/hud/hud.tscn" id="2_7oftu"]

[node name="Two" type="Node2D"]
script = ExtResource("1_fikf5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 309.0
offset_bottom = 201.0

[node name="Router" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="KillLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="JumpButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "返回上一个场景"

[node name="HUD" parent="." instance=ExtResource("2_7oftu")]

[connection signal="pressed" from="VBoxContainer/JumpButton" to="." method="_on_jump_button_pressed"]
